Fix: 레이아웃에 z-index를 설정해서 nav 영역 보존

--- a/src/layout/AppLayout.module.scss
+++ b/src/layout/AppLayout.module.scss
@@ -14,6 +14,7 @@
   margin: 0 auto;
   background: rgba(135, 206, 235, 0.3);
   max-width: 110rem;
+  z-index: $main;
 }
 
 .empty {
